[tool.poetry]
name = "kraken-search"
version = "0.1.0"
description = ""
authors = ["Mathieu Beliveau <mathieu.beliveau.1@gmail.com>"]
readme = "README.md"
packages = [{include = "kraken_search"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
